--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -31,7 +31,7 @@
     flex-shrink: 0;
 }
 
-.sidebar>.logo {
+.sidebar > .logo {
     display: flex;
     align-items: center;
     padding: 10px 20px;
@@ -40,14 +40,14 @@
     font-size: 18px;
 }
 
-.sidebar>.logo>.xAnimated {
+.sidebar > .logo > .xAnimated {
     height: 1.3em;
     width: 1.3em;
     cursor: pointer;
     transition: transform .6s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.sidebar>.logo>.xAnimated>.lineTopBottom {
+.sidebar > .logo > .xAnimated > .lineTopBottom {
     stroke-dasharray: 12 63;
     stroke: var(--text-color);
     fill: none;
@@ -59,7 +59,7 @@
         stroke-dashoffset 2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.sidebar>.logo>.xAnimated>.line {
+.sidebar > .logo > .xAnimated > .line {
     stroke: var(--text-color);
     fill: none;
     stroke-width: 3;
@@ -71,30 +71,30 @@
     transform: rotate(-45deg);
 }
 
-.sidebar:not(.closed):hover .xAnimated>.lineTopBottom {
+.sidebar:not(.closed):hover .xAnimated > .lineTopBottom {
     stroke-dasharray: 20 300;
     stroke-dashoffset: -32.42;
 }
 
-.sidebar>.logo>span {
+.sidebar > .logo > span {
     opacity: 0;
     visibility: hidden;
     white-space: nowrap;
     transition: opacity 0.3s ease 0.3s;
 }
 
-.sidebar:not(.closed):hover>.logo>span {
+.sidebar:not(.closed):hover > .logo > span {
     opacity: 1;
     visibility: visible;
 }
 
-.sidebar>nav>ul {
+.sidebar > nav > ul {
     list-style: none;
     margin: 0;
     padding: 20px 0;
 }
 
-.sidebar>nav>ul>li>a {
+.sidebar > nav > ul > li > a {
     display: flex;
     align-items: center;
     gap: 15px;
@@ -104,24 +104,24 @@
     transition: background 0.2s ease, color 0.2s ease;
 }
 
-.sidebar>nav>ul>li>a:not(.closed):hover {
+.sidebar > nav > ul > li > a:not(.closed):hover {
     background: var(--background-reverse);
     color: var(--text-color-reverse);
 }
 
-.sidebar>nav>ul>li>a>span {
+.sidebar > nav > ul > li > a > span {
     opacity: 0;
     visibility: hidden;
     white-space: nowrap;
     transition: opacity 0.3s ease 0.3s;
 }
 
-.sidebar:not(.closed):hover>nav>ul>li>a>span {
+.sidebar:not(.closed):hover > nav > ul > li > a > span {
     opacity: 1;
     visibility: visible;
 }
 
-.sidebar>a {
+.sidebar > .profile, .sidebar > a {
     display: flex;
     align-items: center;
     margin-top: auto;
@@ -130,8 +130,58 @@
     gap: 10px;
 }
 
-.sidebar>a>div {
+/* Tag <Link /> */
+.sidebar > a > div {
     width: 100%;
+}
+
+.sidebar > .profile > img {
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    border: 1px solid var(--red-primary);
+}
+
+.sidebar > .profile > .info {
+    opacity: 0;
+    visibility: hidden;
+    white-space: nowrap;
+    transition: opacity .3s ease .3s;
+    max-width: 10%;
+}
+
+.sidebar > .profile > .info > p {
+    text-transform: capitalize;
+}
+
+.sidebar:not(.closed):hover > .profile > .info {
+    opacity: 1;
+    visibility: visible;
+}
+
+.sidebar > .profile > .logout {
+    opacity: 0;
+    visibility: hidden;
+    white-space: nowrap;
+    transition: opacity 0.3s ease 0.3s;
+}
+
+.sidebar:not(.closed):hover > .profile > .logout {
+    cursor: pointer;
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.05);
+    margin-left: auto;
+    color: var(--red-primary);
+}
+
+.sidebar:not(.closed):hover > .profile > .logout:not(.closed):hover {
+    transform: scale(1.1);
+}
+
+.sidebar > .profile > .info > p,
+.sidebar > .profile > .info > small {
+    margin: 0;
 }
 
 @media (max-width: 480px) {
@@ -147,9 +197,10 @@
         justify-content: center;
     }
 
-    .sidebar>.logo>span,
-    .sidebar>nav,
-    .sidebar>a {
+    .sidebar > .logo > span,
+    .sidebar > nav,
+    .sidebar > .profile,
+    .sidebar > a {
         display: none;
     }
 
@@ -171,33 +222,33 @@
         overflow: hidden;
     }
 
-    .sidebar>.logo {
+    .sidebar > .logo {
         width: 100%;
         padding: 0px 10px;
     }
 
-    .sidebar>.logo>.xAnimated {
+    .sidebar > .logo > .xAnimated {
         height: 50px;
         width: 50px;
     }
 
-    .sidebar:not(.closed):hover>.logo>span,
-    .sidebar:not(.closed):hover>nav,
-    .sidebar:not(.closed):hover>a {
+    .sidebar:not(.closed):hover > .logo > span,
+    .sidebar:not(.closed):hover > nav,
+    .sidebar:not(.closed):hover > a {
         display: block;
     }
 
-    .sidebar:not(.closed):hover>a {
+    .sidebar:not(.closed):hover > .profile, .sidebar:not(.closed):hover > a {
         display: inline;
         display: flex;
         margin-bottom: 70px;
     }
 
-    .sidebar:not(.closed):hover>nav>ul {
+    .sidebar:not(.closed):hover > nav > ul {
         display: block;
     }
 
-    .sidebar:not(.closed):hover>nav>ul>li>a>span {
+    .sidebar:not(.closed):hover > nav > ul > li > a > span {
         display: inline;
         opacity: 1;
         visibility: visible;
