feat(components/Table): Reusable table, you just need to pass the columns, the data, and the hidden columns on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --text-color: #000000;
   --text-color-reverse: #ffffff;
   --red-primary: #b20000;
+  --box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.7);
 }
 
 .DarkTheme {
@@ -12,6 +13,7 @@
   --background-reverse: #ffffff;
   --text-color: #ffffff;
   --text-color-reverse: #000000;
+  --box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.3);
 }
 
 * {
