--- a/src/app/(pages)/(private)/Users/Users.module.css
+++ b/src/app/(pages)/(private)/Users/Users.module.css
@@ -1,31 +1,33 @@
-.UsersPage {
+.usersPage {
   background: var(--background);
   color: var(--text-color);
   padding: 10px 20px;
-  min-height: 90vh;
+  max-width: 100vw;
 }
 
-.UsersPage>.UsersPageHeader {
+.usersPage > .usersPageHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
 }
 
-.UsersPage>.UsersPageHeader>.createNewUsers {
+.usersPage > .usersPageHeader > .createBtn {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.5rem;
+  background: var(--red-primary);
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.375rem;
   cursor: pointer;
-  color: var(--red-primary);
-  padding: 0px 5px;
-  border: 2px solid transparent;
+  box-shadow: var(--box-shadow);
 }
 
-.UsersPage>.UsersPageHeader>.createNewUsers:hover {
+.usersPage > .usersPageHeader > .createBtn:hover {
   transition: .3s ease-in-out;
-  transform: scale(1.05);
-  border-bottom: 2px solid var(--red-primary);
+  transform: scale(1.1);
 }
 
 .actions {
@@ -33,38 +35,45 @@
   gap: 10px;
 }
 
-.actions>.icon {
+.actions > .icon {
   cursor: pointer;
 }
 
-.actions>.icon:hover {
+.actions > .icon:hover {
   cursor: pointer;
   transform: scale(1.2);
 }
 
-.actions>.icon:nth-child(1):hover {
+.actions > .icon:nth-child(1):hover {
   color: green;
 }
 
-.actions>.icon:nth-child(2):hover {
+.actions > .icon:nth-child(2):hover {
   color: var(--red-primary);
 }
 
-.editForm>.selectWrapper>.select {
+.editForm > .selectWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px 5px;
+}
+
+.editForm > .selectWrapper > .select {
   padding: 5px;
-  margin: 20px 0px 20px 40px;
   border: none;
   border-radius: 7px;
   box-shadow: var(--box-shadow);
 }
 
 @media (max-width: 480px) {
-  .UsersPage>.UsersPageHeader {
+  .usersPage > .usersPageHeader {
     flex-direction: column;
     text-align: center;
+    gap: 30px;
   }
 
-  .UsersPage>.UsersPageHeader>.createNewUsers {
+  .usersPage > .usersPageHeader > .createNewUsers {
     font-size: 20px;
     margin: 20px 0px;
   }
