refactor(src): refactored the code to reduce unnecessary uses of 'use client' and refactored the code for better reading and understanding of the code

--- a/src/app/(pages)/(public)/Login/Login.module.css
+++ b/src/app/(pages)/(public)/Login/Login.module.css
@@ -1,4 +1,4 @@
-.mainLogin {
+.loginPage {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -8,34 +8,35 @@
     width: 100%;
 }
 
-.mainLogin > .form {
+.loginPage > .form {
     width: 350px;
     border-radius: 20px;
     text-align: center;
 }
 
-.mainLogin > .form > .inputGroup {
+.loginPage > .form > .inputGroup {
     margin: 0 0 2em;
     padding: 0;
     position: relative;
 }
 
-.mainLogin > .form > .inputGroup > label {
+.loginPage > .form > .inputGroup > label {
     font-size: 1.25em;
     color: var(--red-primary);
 }
 
-.mainLogin > .form > .inputGroup > .showPasswordToggle {
+.loginPage > .form > .inputGroup > .showPasswordToggle {
     position: absolute;
     right: 20px;
     top: 16px;
 }
-.mainLogin > .form > .inputGroup > .showPasswordToggle > .showPasswordCheck {
+
+.loginPage > .form > .inputGroup > .showPasswordToggle > .showPasswordCheck {
     position: absolute;
     opacity: 0;
 }
 
-.mainLogin > .form > .forgotPassword {
+.loginPage > .form > .forgotPassword {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -43,7 +44,7 @@
     margin-top: 15px;
 }
 
-.mainLogin > .form > .forgotPassword > button {
+.loginPage > .form > .forgotPassword > button {
     background-color: transparent;
     border: 2px solid transparent;
     color: var(--text-color);
@@ -51,12 +52,12 @@
     transition: .3s ease-in-out;
 }
 
-.mainLogin > .form > .forgotPassword > button:hover {
+.loginPage > .form > .forgotPassword > button:hover {
     border-bottom: 2px solid var(--red-primary);
     transform: scale(1.05);
 }
 
-.mainLogin > .svgContainer {
+.loginPage > .svgContainer {
     position: relative;
     width: 200px;
     height: 200px;
@@ -65,7 +66,7 @@
     pointer-events: none;
 }
 
-.mainLogin > .svgContainer > .svgContainerWrapper {
+.loginPage > .svgContainer > .svgContainerWrapper {
     position: relative;
     width: 100%;
     height: 0;
@@ -74,7 +75,7 @@
     padding-bottom: 100%;
 }
 
-.mainLogin > .svgContainer > .svgContainerWrapper > .svgContainerWrapperMySVG {
+.loginPage > .svgContainer > .svgContainerWrapper > .svgContainerWrapperMySVG {
     position: absolute;
     left: 0px;
     top: 0px;
@@ -83,7 +84,7 @@
     pointer-events: none;
 }
 
-.mainLogin > .svgContainer:after {
+.loginPage > .svgContainer:after {
     content: "";
     position: absolute;
     top: 0px;
@@ -95,7 +96,9 @@
     border-radius: 50%;
 }
 
-.twoFactorSection, .resetPasswordRequest, .resetPasswordConfirm {
+.twoFactorSection,
+.resetPasswordRequest,
+.resetPasswordConfirm {
     height: 90vh;
     width: 100vw;
     display: flex;
@@ -103,7 +106,9 @@
     flex-direction: column;
 }
 
-.twoFactorSection > .imgIllustration, .resetPasswordRequest > .imgIllustration, .resetPasswordConfirm > .imgIllustration {
+.twoFactorSection > .imgIllustration,
+.resetPasswordRequest > .imgIllustration,
+.resetPasswordConfirm > .imgIllustration {
     margin-top: 20px;
 }
 
@@ -117,7 +122,7 @@
 }
 
 @media (max-width: 480px) {
-    .mainLogin > .form {
+    .loginPage > .form {
         max-width: 95vw;
     }
 }
