--- a/src/app/(pages)/(private)/Categories/Categories.module.css
+++ b/src/app/(pages)/(private)/Categories/Categories.module.css
@@ -3,6 +3,7 @@
     color: var(--text-color);
     padding: 10px 20px;
     max-width: 100vw;
+    transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
 .categoriesPage > .categoriesPageHeader {
@@ -63,5 +64,4 @@
         font-size: 20px;
         margin: 20px 0px;
     }
-
 }
