--- a/src/app/(pages)/(private)/Users/Users.module.css
+++ b/src/app/(pages)/(private)/Users/Users.module.css
@@ -3,6 +3,7 @@
   color: var(--text-color);
   padding: 10px 20px;
   max-width: 100vw;
+  transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
 .usersPage > .usersPageHeader {
