feat(pages/EventDetail): add the page to events detail to unauthenticated users, also allowing them to register for the event

--- a/src/app/(pages)/(private)/Users/Users.module.css
+++ b/src/app/(pages)/(private)/Users/Users.module.css
@@ -59,6 +59,7 @@
 .editForm > .selectWrapper > .select {
   padding: 5px;
   border: none;
+  outline: none;
   border-radius: 7px;
   box-shadow: var(--box-shadow);
 }
