--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,11 +1,11 @@
 .divLoaderContainer {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     /* I did that ´cause the sidebar! */
     margin-left: -60px;
     width: calc(100vw + 60px);
-    height: 100vh;
+    min-height: 100vh;
     z-index: 9999;
     display: flex;
     align-items: center;
