--- a/src/app/(pages)/(private)/Events/Participants/[id]/Participants.module.css
+++ b/src/app/(pages)/(private)/Events/Participants/[id]/Participants.module.css
@@ -1,4 +1,4 @@
-.categoriesPage {
+.participantsPage {
     background: var(--background);
     color: var(--text-color);
     padding: 10px 20px;
@@ -6,14 +6,19 @@
     transition: color .4s ease-in-out, background .4s ease-in-out;
 }
 
-.categoriesPage > .categoriesPageHeader {
+.participantsPage > .participantsPageHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
 }
 
-.categoriesPage > .categoriesPageHeader > .createBtn {
+.participantsPage > .participantsPageHeader > .buttonsParticipantsPage {
+    display: flex;
+    gap: 30px;
+}
+
+.participantsPage > .participantsPageHeader > .buttonsParticipantsPage > button {
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -26,31 +31,13 @@
     box-shadow: var(--box-shadow);
 }
 
-.categoriesPage > .categoriesPageHeader > .createBtn:hover {
+.participantsPage > .participantsPageHeader > .buttonsParticipantsPage > button:hover {
     transition: .3s ease-in-out;
     transform: scale(1.1);
 }
 
-.actions {
-    display: flex;
-    gap: 10px;
-}
-
-.actions > .icon:hover {
-    cursor: pointer;
-    transform: scale(1.2);
-}
-
-.actions > .icon:nth-child(1):hover {
-    color: green;
-}
-
-.actions > .icon:nth-child(2):hover {
-    color: var(--red-primary);
-}
-
 @media (max-width: 480px) {
-    .categoriesPage > .categoriesPageHeader {
+    .participantsPage > .participantsPageHeader {
         flex-direction: column;
         text-align: center;
         gap: 30px;
