styles(src): styling changes, such as: removing padding, text alignment, changing font-size and height adjustment

--- a/src/app/(pages)/(private)/Events/[id]/EventForm.module.css
+++ b/src/app/(pages)/(private)/Events/[id]/EventForm.module.css
@@ -88,6 +88,11 @@
     gap: 1rem;
 }
 
+.formPage > .form > .row > .checkboxInput {
+    justify-self: start;
+    padding-left: 5px;
+}
+
 .formPage > .form > .row > .input,
 .formPage > .form > .row > .customWrapper > .input {
     font-size: 20px;
