--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -8,7 +8,7 @@
     background: rgba(0, 0, 0, 0.7);
 }
 
-.modalSection > .modalDiv {
+.modalContainer > .modalSection > .modalDiv {
     position: relative;
     background: var(--background);
     color: var(--text-color);
@@ -16,10 +16,12 @@
     padding: 20px;
     border-radius: 20px;
     max-width: 90%;
+    max-height: 95vh;
+    overflow-y: scroll;
     width: 400px;
 }
 
-.modalDiv > .modalClose {
+.modalContainer > .modalSection > .modalDiv > .modalClose {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
@@ -29,24 +31,24 @@
     cursor: pointer;
 }
 
-.modalDiv > .modalClose:hover {
+.modalContainer > .modalSection > .modalDiv > .modalClose:hover {
     transition: .3s ease-in-out;
     transform: scale(1.2);
 }
 
-.modalSection > .modalDiv > .modalIcon {
+.modalContainer > .modalSection > .modalDiv > .modalIcon {
     text-align: center;
     margin: 10px 0px;
 }
 
-.modalSection > .modalDiv > .modalTitle,
-.modalSection > .modalDiv > .modalMessage {
+.modalContainer > .modalSection > .modalDiv > .modalTitle,
+.modalContainer > .modalSection > .modalDiv > .modalMessage {
     margin: 20px 0px;
     text-align: center;
 }
 
-.modalSection > .modalDiv > .modalTitle,
-.modalSection > .modalDiv > .modalError > .errorMessage {
+.modalContainer > .modalSection > .modalDiv > .modalTitle,
+.modalContainer > .modalSection > .modalDiv > .modalError > .errorMessage {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,4 +57,8 @@
     color: red;
     gap: 5px;
     padding: 10px 0px;
+}
+
+.modalContainer ::-webkit-scrollbar {
+    display: none;
 }
