--- a/src/app/(pages)/(private)/Events/Events.module.css
+++ b/src/app/(pages)/(private)/Events/Events.module.css
@@ -80,18 +80,13 @@
     transform: scale(1.1);
 }
 
-.previewWrapper > img {
+.previewWrapper {
+    position: relative;
+    width: 150px;
+    height: 70px;
+    overflow: hidden;
     border-radius: 10px;
     box-shadow: var(--box-shadow);
-}
-
-.form > .formGroup > .previewWrapperEdit > img {
-    width: 320px;
-    height: 150px;
-    margin: 30px 0px;
-    border-radius: 20px;
-    box-shadow: var(--box-shadow);
-    position: relative;
 }
 
 .actions {
