--- a/src/app/(pages)/(public)/EventDetail/[id]/EventDetail.module.css
+++ b/src/app/(pages)/(public)/EventDetail/[id]/EventDetail.module.css
@@ -12,12 +12,7 @@
     width: 100%;
     height: 400px;
     overflow: hidden;
-}
-
-.eventDetailPage > .detailPageInfo > .detailPageHeader > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    position: relative;
 }
 
 .eventDetailPage > .detailPageInfo > .title {
