--- a/src/components/CarouselComponent/CarouselComponent.module.css
+++ b/src/components/CarouselComponent/CarouselComponent.module.css
@@ -18,7 +18,7 @@
 .carousel > .slider {
     display: flex;
     height: 100%;
-    transition: transform 0.5s ease-in-out;
+    transition: transform .5s ease-in-out;
 }
 
 .carousel > .slider > .slide {
@@ -26,13 +26,12 @@
     width: 100%;
     height: 100%;
     flex-shrink: 0;
+    overflow: hidden;
 }
 
 .carousel > .slider > .slide > .image {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
     user-select: none;
+    pointer-events: none;
 }
 
 .carousel > .indicators {
