--- a/src/app/(pages)/(private)/Events/[id]/EventForm.module.css
+++ b/src/app/(pages)/(private)/Events/[id]/EventForm.module.css
@@ -31,19 +31,15 @@
 
 .formPage > .form > .upload {
     position: relative;
-    display: flex;
-    justify-content: center;
     width: 100%;
     height: 400px;
-    border: 2px dashed var(--text-color);
     border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    cursor: pointer;
-    font-size: 3rem;
+    padding: 0;
+    overflow: hidden;
+    display: block;
+    box-shadow: var(--box-shadow);
 }
+
 
 .formPage > .form > .upload > .previewImage {
     width: 100%;
@@ -52,42 +48,11 @@
     border-radius: 8px;
 }
 
-.formPage > .form > .upload > .uploadImage {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 8px;
-}
-
-.formPage > .form > .upload > .uploadPlaceholder {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-
-.formPage > .form > .upload > .uploadPlaceholder > .uploadIcons {
-    display: flex;
-    gap: 1.5rem;
-}
-
-.formPage > .form > .upload > .uploadPlaceholder > .uploadIcons > span {
-    font-size: 32px;
-}
-
 .formPage > .form > .upload > .uploadPlaceholder > p {
     margin-top: 20px;
     font-size: 1rem;
     color: var(--text-color);
     text-align: center;
-}
-
-.formPage > .form > .upload > .fileInput {
-    position: absolute;
-    inset: 0;
-    opacity: 0;
-    cursor: pointer;
 }
 
 .formPage > .form > .row {
@@ -165,7 +130,7 @@
     }
 
     .formPage > .form > .upload {
-        padding: 2rem;
+        padding: 0;
     }
 
     .formPage > .form > .buttonSubmit {
