--- a/src/components/CardEvents/CardEvents.module.css
+++ b/src/components/CardEvents/CardEvents.module.css
@@ -37,6 +37,7 @@
     position: absolute;
     top: 3px;
     right: 3px;
+    z-index: 1;
     font-size: 15px;
     font-weight: 900;
     background-color: var(--red-primary);
