--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -217,6 +217,13 @@
     margin: 30px 0px 0px 10px;
 }
 
+@media (max-width: 768px) and (min-width: 481px) {
+    .sidebar {
+        overflow-y: auto;
+    }
+}
+
+
 @media (max-width: 480px) {
     .sidebar {
         position: fixed;
@@ -226,7 +233,6 @@
         width: 65px;
         height: 70px;
         display: flex;
-        align-items: center;
         justify-content: center;
         border-bottom: 1px solid var(--red-primary);
     }
@@ -246,6 +252,7 @@
     .sidebar:not(.closed):hover,
     .sidebar.open~* {
         width: 220px;
+        border-bottom: none;
     }
 
     .sidebar:not(.closed):hover {
@@ -276,7 +283,6 @@
     .sidebar:not(.closed):hover > a {
         display: inline;
         display: flex;
-        margin-bottom: 70px;
     }
 
     .sidebar:not(.closed):hover > nav > ul {
