feat(components/Buttons/ButtonComebackUrl): this button provides the user with the option to return to the previous page or to a URL chosen in the code

--- a/src/app/(pages)/(public)/EventDetail/[id]/EventDetail.module.css
+++ b/src/app/(pages)/(public)/EventDetail/[id]/EventDetail.module.css
@@ -1,3 +1,9 @@
+.eventDetailPage > .buttonComeback {
+    max-width: 900px;
+    width: 95%;
+    margin: 1rem auto;
+}
+
 .eventDetailPage > .detailPageInfo {
     max-width: 900px;
     width: 95%;
