styles(ui): update sidebar, dark mode color, system font, and event card borders

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,8 @@
   --background-reverse: #ffffff;
   --text-color: #ffffff;
   --text-color-reverse: #000000;
-  --box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.25);
+  --red-primary: #8f0303;
+  --box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
 }
 
 * {
