--- a/src/components/Filters/Filters.module.css
+++ b/src/components/Filters/Filters.module.css
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     top: 10px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
 }
@@ -49,11 +50,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
-.filtersContainer > .centerSideFilters > .label {
-    font-size: 0.85rem;
-    margin-bottom: 0.25rem;
-}
-
 .filtersContainer > .centerSideFilters > .selectDropdown {
     width: 100%;
     padding: 0.5rem 0.75rem;
@@ -83,11 +79,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
-}
-
-.filtersContainer > .rightSideFilters > .datesFilter > .label {
-    font-size: 0.85rem;
-    margin-bottom: 0.25rem;
 }
 
 .filtersContainer > .rightSideFilters > .datesFilter > .inputDate {
